CREATE DOCKERFILE FOR ONLINE REVIEW BUILD AND RUN

--- a/online_review/docker-compose.yml
+++ b/online_review/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - JAVA_OPTS=-Xms256m -Xmx512m
     volumes:
       - .:/root/online_review
-    ports: 
+    ports:
       - "8080:8080"
       - "443:443"
     links:
@@ -23,5 +23,14 @@ services:
     container_name: tc-online-review-auto-pilot
     volumes:
       - .:/root/online_review
+    links:
+      - tc-informix:db
+  run-online-review:
+    image: appiriodevops/online-review
+    environment:
+      - JAVA_OPTS=-Xms256m -Xmx512m
+    ports:
+      - "8080:8080"
+      - "443:443"
     links:
       - tc-informix:db
