--- a/submission-system/docker/nginx/default.conf
+++ b/submission-system/docker/nginx/default.conf
@@ -7,7 +7,8 @@ worker_processes  1;
 
 #pid        logs/nginx.pid;
 
-env IP;
+env DOCKER_IP;
+env HOST_IP;
 
 events {
     worker_connections  1024;
@@ -35,7 +36,8 @@ http {
     server {
         listen       80;
         server_name  localhost;
-        set_by_lua $ip 'return os.getenv("IP")';
+        set_by_lua $docker_ip 'return os.getenv("DOCKER_IP")';
+        set_by_lua $host_ip 'return os.getenv("HOST_IP")';
 
         #charset koi8-r;
 
@@ -49,49 +51,49 @@ http {
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /v3/members {
-            proxy_pass   http://$ip:8080;
+            proxy_pass   http://$docker_ip:8080;
             include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /v3/authorizations {
-            proxy_pass http://$ip:8080;
+            proxy_pass http://$docker_ip:8080;
         include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /v3/challenges {
-            proxy_pass   http://$ip:8080;
+            proxy_pass   http://$docker_ip:8080;
         include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /v3/submissions {
-            proxy_pass   http://$ip:8180;
+            proxy_pass   http://$host_ip:8180;
         include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /v3/files {
-            proxy_pass   http://$ip:8080;
+            proxy_pass   http://$docker_ip:8080;
         include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /mock-upload {
-            proxy_pass   http://$ip:8080;
+            proxy_pass   http://$docker_ip:8080;
         include /data/cors-include.conf;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
         location /mock-download {
-            proxy_pass   http://$ip:8080;
+            proxy_pass   http://$docker_ip:8080;
         include /data/cors-include.conf;
         }
 
