--- a/submission-system/docker-compose.yml
+++ b/submission-system/docker-compose.yml
@@ -1,10 +1,13 @@
 version: '2'
 services:
-    dynamodb:
-        image: "appiriodevops/submissions:dynamodb"
-        command: "-inMemory -port 7777"
+    postgres:
+        image: "postgres:9.4"
+        environment:
+            POSTGRES_PASSWORD: "test"
+            POSTGRES_USER: "postgres"
+            POSTGRES_DB: "test"
         ports:
-            - "7777:7777"
+            - "5432:5432"
     sqs:
         image: "appiriodevops/submissions:sqs"
         ports:
@@ -14,7 +17,7 @@ services:
         environment:
             IP: "$DOCKER_IP"
         depends_on:
-            - dynamodb
+            - postgres
             - sqs
         command: "/bin/bash -c /data/init.sh"
     informix:
@@ -51,5 +54,6 @@ services:
             - nginx
             - informix
             - kafka
+            - postgres
         ports:
             - "3000:3000"
