updating postgres instance to have file table created

--- a/submission-system/docker-compose.yml
+++ b/submission-system/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     postgres:
-        image: "appiriodevops/submissions:postgres"
+        image: "appiriodevops/submissions:postgres-1.0"
         environment:
             POSTGRES_PASSWORD: "test"
             POSTGRES_USER: "postgres"
