--- a/docker/direct-app/run/Dockerfile
+++ b/docker/direct-app/run/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /root/jboss-4.2.3.GA/bin
 VOLUME ["/root/jboss-4.2.3.GA"]
 
 # start the jboss
-ENTRYPOINT ["./run.sh", "-b", "0.0.0.0"]
+ENTRYPOINT ["./start.sh"]
 
 # expose jboss ports
 EXPOSE 8180 443 1198 1199 3973
