--- a/submission-system/docker-compose.yml
+++ b/submission-system/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         ports:
             - "2021:2021"
     mock-services:
-        image: appiriodevops/submissions:mock-services
+        image: appiriodevops/submissions:mock-services-dev
         environment:
             BASE_URL: "http://$DOCKER_IP"
         ports:
@@ -48,7 +48,7 @@ services:
         ports:
             - "80:80"
     submissions:
-        image: appiriodevops/submissions:frontend-1.0
+        image: appiriodevops/submissions:frontend-dev
         depends_on:
             - nginx
             - informix
