--- a/submission-system/docker/frontend/topcoder-app/package.json
+++ b/submission-system/docker/frontend/topcoder-app/package.json
@@ -13,7 +13,6 @@
     "babel-polyfill": "^6.7.2",
     "bardjs": "^0.1.8",
     "bower": "^1.6.8",
-    "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.15.0",
@@ -56,6 +55,7 @@
     "appirio-styles": "0.x.x",
     "appirio-tech-ng-iso-constants": "^1.0.6",
     "appirio-tech-ng-ui-components": "^2.1.2",
+    "appirio-tech-react-components": "^0.0.12",
     "auth0-angular": "^4.1.0",
     "auth0-js": "^6.8.0",
     "d3": "^3.5.14",
