--- a/docker/direct-app/docker-compose.yml
+++ b/docker/direct-app/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   tc-informix:
-    image: "appiriodevops/informix:1.2"
+    image: "appiriodevops/informix:1b3d4ef"
     ports:
       - "2021:2021"
   tc-direct-build:
