--- a/submission-system/docker-compose.yml
+++ b/submission-system/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         ports:
             - "2021:2021"
     mock-services:
-        image: appiriodevops/submissions:mock-services
+        build: docker/s3_mock_api
         environment:
             BASE_URL: "http://$DOCKER_IP"
         ports:
