adding project mock service to submission system

--- a/submission-system/docker-compose.yml
+++ b/submission-system/docker-compose.yml
@@ -38,7 +38,7 @@ services:
             - "2181:2181"
             - "9092:9092"
     nginx:
-        image: appiriodevops/submissions:nginx-1.0
+        build: docker/nginx
         depends_on:
             - aws-init
             - mock-services
