--- a/docker/online_review/docker/online_review/Dockerfile
+++ b/docker/online_review/docker/online_review/Dockerfile
@@ -1,6 +1,7 @@
 FROM appiriodevops/online-review:env
 
 RUN mkdir /root/online_review
+RUN mkdir /root/downloads
 
 #Copy online_review code files to local disk
 ADD ./ /root/online_review
@@ -12,8 +13,5 @@ COPY token.properties.docker /root/online_review/token.properties
 
 #Deploy online review app to jboss
 RUN ant first_deploy deploy
-
-#Delete the files from local disk
-RUN rm -rf /root/online_review
 
 CMD ["/root/jboss-4.0.2/bin/run.sh","-DFOREGROUND"]
