--- a/docker/direct-app/docker-compose.yml
+++ b/docker/direct-app/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+  tc-cache:
+    image: "redis:3.2.5"
+    ports:
+      - "6379:6379"
   elasticsearch14:
     image: itzg/elasticsearch:1.4
     ports:
@@ -22,6 +26,7 @@ services:
     image: "appiriodevops/direct-app:run-volume"
     links:
       - "tc-informix"
+      - "tc-cache"
     hostname: cockpit.cloud.topcoder.com
     volumes:
       - "${BUILT_JBOSS_DIR}:/root/jboss-4.2.3.GA"
@@ -36,6 +41,7 @@ services:
     image: "appiriodevops/direct-app:04680b3"
     links:
       - "tc-informix"
+      - "tc-cache"
     hostname: cockpit.cloud.topcoder.com
     ports:
       - "443:443"
