add services for online review and autopilot

--- a/docker/direct-app/docker-compose.yml
+++ b/docker/direct-app/docker-compose.yml
@@ -58,3 +58,17 @@ services:
       - "1199:1199"
       - "3973:3973"
       - "5446:5446"
+  run-auto-pilot:
+    image: appiriodevops/online-review:autopilot-1.0
+    container_name: run-auto-pilot
+    links:
+      - tc-informix:db
+  run-online-review:
+    image: appiriodevops/online-review:jboss-1.1
+    container_name: run-online-review
+    environment:
+      - JAVA_OPTS=-Xms512m -Xmx1024m
+    links:
+      - tc-informix:db
+    ports:
+      - "80:8080"
