--- a/docker/direct-app/docker-compose.yml
+++ b/docker/direct-app/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       CLUSTER: elasticsearch
       NODE_NAME: elasticsearch
   tc-informix:
-    image: "appiriodevops/tc-database-scripts:73b37cb39abc55ba4456a3773b7c56b9aec2dacf"
+    image: "appiriodevops/tc-database-scripts:9a09c5ab3538b9f37b81beeea11a574ea4a464d1"
     hostname: informix.cloud.topcoder.com
-    container_name: iif_developer_edition
+    container_name: iif_innovator_c
     environment: 
       LICENSE: accept
     ports:
