--- a/docker/online_review/docker-compose.yml
+++ b/docker/online_review/docker-compose.yml
@@ -1,37 +1,52 @@
 version: '2'
 services:
   tc-informix:
-    image: appiriodevops/informix:1b3d4ef
-  tc-online-review:
-    image: appiriodevops/online-review:env
-    working_dir: /root/online_review
-    command: bash -c "sh start_local.sh"
-    container_name: tc-online-review
-    environment:
-      - JAVA_OPTS=-Xms256m -Xmx512m
-    volumes:
-      - .:/root/online_review
+    image: "appiriodevops/tc-database-scripts:latest"
+    hostname: informix.cloud.topcoder.com
+    container_name: iif_innovator_c
+    environment: 
+      LICENSE: accept
     ports:
-      - "8080:8080"
-      - "443:443"
-    links:
-      - tc-informix:db
-  tc-online-review-auto-pilot:
-    image: appiriodevops/online-review:env
-    working_dir: /root/online_review
-    command: bash -c "sh start_local_auto_pilot.sh"
-    container_name: tc-online-review-auto-pilot
+      - "2021:2021"
+      - "2022:2022"
+      - "27017:27017"
+      - "27018:27018"
+      - "27883:27883"
+    tty: true
+
+  build-online-review:
+    image: "appiriodevops/online-review:build"
     volumes:
-      - .:/root/online_review
-    links:
-      - tc-informix:db
+      - "${ONLINE_REVIEW_SOURCE_ROOT}:/root/online_review"
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
+    entrypoint: /root/scripts/build-online-review.sh
+
+  build-auto-pilot:
+    image: "appiriodevops/online-review:build"
+    volumes:
+      - "${ONLINE_REVIEW_SOURCE_ROOT}:/root/online_review"
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
+    entrypoint: /root/scripts/build-auto-pilot.sh
+
+  build-online-review-auto-pilot:
+    image: "appiriodevops/online-review:build"
+    volumes:
+      - "${ONLINE_REVIEW_SOURCE_ROOT}:/root/online_review"
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
+    entrypoint: /root/scripts/build.sh
+
   run-auto-pilot:
-    image: appiriodevops/online-review:autopilot
-    container_name: run-auto-pilot
+    image: "appiriodevops/online-review:build"
+    volumes:
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
     links:
       - tc-informix:db
+    entrypoint: /root/scripts/run-auto-pilot.sh
+
   run-online-review:
-    image: appiriodevops/online-review
+    image: "appiriodevops/online-review:build"
+    volumes:
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
     environment:
       - JAVA_OPTS=-Xms256m -Xmx512m
     ports:
@@ -39,3 +54,20 @@ services:
       - "443:443"
     links:
       - tc-informix:db
+    entrypoint: /root/scripts/run-online-review.sh
+
+  run-online-review-auto-pilot:
+    image: "appiriodevops/online-review:build"
+    volumes:
+      - "${ONLINE_REVIEW_DEPLOYMENT_DIR}:/root/deployment"
+    environment:
+      - JAVA_OPTS=-Xms256m -Xmx512m
+    ports:
+      - "8080:8080"
+      - "443:443"
+    links:
+      - tc-informix:db
+    entrypoint: /root/scripts/run.sh
+
+
+
