TC WEBSITE - MARATHON MATCH UPDATE

--- a/docker/tc-website/httpd/apache-conf/extra/httpd-vhosts-tc.conf
+++ b/docker/tc-website/httpd/apache-conf/extra/httpd-vhosts-tc.conf
@@ -11,6 +11,7 @@
         AccessFileName .htaccess
         JkMount /* tomcat_tc
         JkMount /distui/* tomcat_tc
+        JkMount /longcontest/* tomcat_mm
 
         <IfModule php5_module>
                 <Location /home>
