--- a/docker/tc-website/httpd/apache-conf/workers.conf
+++ b/docker/tc-website/httpd/apache-conf/workers.conf
@@ -1,8 +1,12 @@
 ps=/
 
-worker.list=tomcat_tc
+worker.list=tomcat_tc, tomcat_mm
 
 worker.tomcat_tc.port=8009
 worker.tomcat_tc.host=tc-website
 worker.tomcat_tc.type=ajp13
+
+worker.tomcat_mm.port=8009
+worker.tomcat_mm.host=tc-website
+worker.tomcat_mm.type=ajp13
 
