fix docker build environment for tc-website

--- a/docker/tc-website/base/Dockerfile
+++ b/docker/tc-website/base/Dockerfile
@@ -6,8 +6,8 @@ RUN yum update -y && yum install -y unzip wget dos2unix
 WORKDIR /root
 
 # install jdk7
-RUN wget -O /root/jdk-7u79-linux-x64.rpm --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.rpm"
-RUN rpm -ivh jdk-7u79-linux-x64.rpm
+RUN wget -O /root/jdk-8u191-linux-x64.rpm --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "https://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.rpm"
+RUN rpm -ivh jdk-8u191-linux-x64.rpm
 
 # install apache-ant
 RUN wget -O /root/apache-ant-1.7.1-bin.zip http://archive.apache.org/dist/ant/binaries/apache-ant-1.7.1-bin.zip
@@ -18,14 +18,14 @@ RUN tar xzf ant-contrib-1.0b2-bin.tar.gz
 RUN cp ant-contrib/lib/ant-contrib.jar /root/apache-ant-1.7.1/lib/
 
 # set env variables
-ENV JAVA_HOME /usr/java/jdk1.7.0_79
+ENV JAVA_HOME /usr/java/jdk1.8.0_191-amd64
 ENV ANT_HOME /root/apache-ant-1.7.1
 ENV PATH $JAVA_HOME/bin:$GRAILS_HOME/bin:$ANT_HOME/bin:$PATH
 
 RUN chmod 701 /root
 
 # remove useless files
-RUN rm /root/jdk-7u79-linux-x64.rpm
+RUN rm /root/jdk-8u191-linux-x64.rpm
 RUN rm /root/apache-ant-1.7.1-bin.zip
 RUN rm /root/ant-contrib-1.0b2-bin.tar.gz
 RUN rm -rf /root/ant-contrib
