--- a/docker/tc-website/httpd/Dockerfile
+++ b/docker/tc-website/httpd/Dockerfile
@@ -5,16 +5,16 @@ RUN yum install -y gcc libtool httpd-devel-2.2.15 httpd-2.2.15 mod_ssl
 WORKDIR /root
 
 # install mod_jk
-RUN wget http://apache.mirror.rafal.ca/tomcat/tomcat-connectors/jk/tomcat-connectors-1.2.42-src.tar.gz
-RUN tar -xvzf tomcat-connectors-1.2.42-src.tar.gz
-RUN cd tomcat-connectors-1.2.42-src/native; \
+RUN wget http://mirror.bit.edu.cn/apache/tomcat/tomcat-connectors/jk/tomcat-connectors-1.2.46-src.tar.gz
+RUN tar -xvzf tomcat-connectors-1.2.46-src.tar.gz
+RUN cd tomcat-connectors-1.2.46-src/native; \
 	./configure --with-apxs=/usr/sbin/apxs; \
 	make; \
 	libtool --finish /usr/lib64/httpd/modules; \
 	make install
 
-RUN rm tomcat-connectors-1.2.42-src.tar.gz
-RUN rm -rf tomcat-connectors-1.2.42-src
+RUN rm tomcat-connectors-1.2.46-src.tar.gz
+RUN rm -rf tomcat-connectors-1.2.46-src
 
 COPY apache-conf /etc/httpd/conf
 
